--- a/index.html
+++ b/index.html
@@ -5571,7 +5571,7 @@ var author$project$Main$vTodoForm = function (todo) {
 						elm$html$Html$text('Add Todo')
 					])),
 				A5(author$project$Main$vInput, 'text', 'title', 'form-input', todo.title, author$project$Main$ChangeTitle),
-				A5(author$project$Main$vInput, 'text', 'title', 'form-input', todo.description, author$project$Main$ChangeDesc),
+				A5(author$project$Main$vInput, 'text', 'description', 'form-input', todo.description, author$project$Main$ChangeDesc),
 				A2(
 				elm$html$Html$div,
 				_List_Nil,
